@@ -415,6 +415,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - An advice that was historized once (asked again or really given) may not be deleted anymore except by real managers
 - Fixed bug in index previous_review_state that failed when datachange functionnality was enabled
   as it saves datachanges in the workflow_history
+- MeetingItem.caegory vocabulary (listCategories) uses natural sorting to display elements, it means that labels will be sorted
+  alphabetically but with advanced management for numbered labels like 1, 1.1, 1.2, 2, 2.1, 2.2, ..., 10, 10.1, 10.2, ...
+  that will be sorted correctly.  This rely on the 'natsort' library
 
 3.3 (2015-02-27)
 ----------------
